update .htaccess to rewrite ssl links
Also updated some file permissions for some jsavscript files

--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,10 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
+# force SSL
+RewriteCond %{HTTPS} !=on
+#
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 RewriteBase /
 RewriteRule ^index\.php$ - [L]
 
@@ -14,6 +18,7 @@ RewriteRule ^ - [L]
 RewriteRule ^([_0-9a-zA-Z-]+/)?(wp-(content|admin|includes).*) $2 [L]
 RewriteRule ^([_0-9a-zA-Z-]+/)?(.*\.php)$ $2 [L]
 RewriteRule . index.php [L]
+
 </IfModule>
 
 # END WordPress
