Add focus rating display
Added method to display focus rating (only if rating is set to focus).
Minor refactoring.

--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,7 @@
-
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-# force SSL
-RewriteCond %{HTTPS} !=on
-#
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-RewriteBase /
+RewriteBase /candela/
 RewriteRule ^index\.php$ - [L]
 
 # add a trailing slash to /wp-admin
@@ -18,7 +13,6 @@ RewriteRule ^ - [L]
 RewriteRule ^([_0-9a-zA-Z-]+/)?(wp-(content|admin|includes).*) $2 [L]
 RewriteRule ^([_0-9a-zA-Z-]+/)?(.*\.php)$ $2 [L]
 RewriteRule . index.php [L]
-
 </IfModule>
 
 # END WordPress
